[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Azazel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Azazel.gd" type="Script" id=2]
[ext_resource path="res://Src/Smoke.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/EnemyHurt.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/foom_0.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/hit5.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/evillaugh.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier:hint_range(0.0,1.0)=0;

void fragment(){
	vec4 color=texture(TEXTURE,UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR=color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Fly",
"speed": 6.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 13, 23 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 13, 15 )

[node name="Azazel" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.262745, 0.262745, 0.262745, 0.529412 )
material = SubResource( 2 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 12 )
animation = "Fly"

[node name="Smoke" parent="AnimatedSprite" instance=ExtResource( 3 )]
position = Vector2( -1.33333, -2.66667 )
emitting = true
amount = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 1 )
shape = SubResource( 13 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RangeAttack" type="Timer" parent="."]
wait_time = 0.35

[node name="SlashTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SlashArea" type="Area2D" parent="."]
position = Vector2( 25, 6 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlashArea"]
position = Vector2( 1, -1 )
shape = SubResource( 14 )
disabled = true

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0
attenuation = 1.4

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
pitch_scale = 2.0

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 7.0
pitch_scale = 0.5
attenuation = 1.42

[node name="Laugh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 3.0
pitch_scale = 1.3
attenuation = 1.42

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_AttackDuration_timeout"]
[connection signal="timeout" from="RangeAttack" to="." method="_on_RangeAttack_timeout"]
[connection signal="timeout" from="SlashTime" to="." method="_on_SlashTime_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="body_entered" from="SlashArea" to="." method="_on_SlashArea_body_entered"]
[connection signal="finished" from="DieSound" to="." method="_on_DieSound_finished"]
